front/src/components/comment/comment.module.scss
.comment {
  @include flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: $white;
  z-index: 2;
  .close {
    @include flex;
    justify-content: flex-end;
    padding-right: 1.7rem;
    width: 100%;
    min-height: 5rem;
  }
  .comment-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    padding: 4rem;
    gap: 4rem;
    width: 100%;
    flex-grow: 1;
    overflow: auto;
    box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, 0.3),
      inset 0 -10px 10px -10px rgba(0, 0, 0, 0.3);

    .comment-item {
      @include flex;
      flex-direction: column;
      align-items: flex-start;
      gap: 0.2rem;
      width: 100%;

      .comment-content {
        @include font(
          $fs: $body1,
          $fw: $regular,
          $fc: $black,
          $ff: $noto-serif
        );
      }

      .comment-item-bottom {
        @include flex;
        width: 100%;
        justify-content: space-between;
        padding: 0 0.5rem;

        .link {
          text-decoration: none;
          @include font(
            $fs: $body1,
            $fw: $regular,
            $fc: $black,
            $ff: $noto-sans
          );
        }

        .button-wrapper {
          @include flex;
          gap: 1rem;
        }
      }
    }
  }
  .comment-input {
    @include flex;
    width: 100%;
    min-height: 5rem;
    padding: 0 2rem;
    gap: 2rem;
    textarea {
      flex-grow: 1;
      height: 3rem;
      caret-color: $gray;
      @include font($fs: $body1, $fw: $regular, $fc: $black, $ff: $noto-serif);
      &:focus {
        outline: none;
      }
    }
  }
}

